--- a/kobold2d/Cracker/BuildSettings/BuildSettings-Debug-iOS.xcconfig
+++ b/kobold2d/Cracker/BuildSettings/BuildSettings-Debug-iOS.xcconfig
@@ -5,9 +5,19 @@
 // Released under MIT License in Germany (LICENSE-Kobold2D.txt).
 //
 
+//
+// Kobold2D™ --- http://www.kobold2d.org
+//
+// Copyright (c) 2010-2011 Steffen Itterheim. 
+// Released under MIT License in Germany (LICENSE-Kobold2D.txt).
+//
 
-#include "../__Kobold2D__/buildsettings/HeaderSearchPaths.xcconfig"
-#include "../__Kobold2D__/buildsettings/Common-Debug.xcconfig"
-#include "../__Kobold2D__/buildsettings/Common-iOS.xcconfig"
+// Provide path to all folders with header files that are in use
+// Why so verbose? Because using recursive paths /** together with /../ breaks code sense :(
+// See: http://stackoverflow.com/questions/5288697/code-loses-syntax-color-in-xcode-4
+
+#include "HeaderSearchPaths.xcconfig"
+#include "Common-Debug.xcconfig"
+#include "Common-iOS.xcconfig"
 
 #include "BuildSettings-iOS.xcconfig"
